Issue #5: Add maven build for .zip distributions Added support for custom Java and MedSavantServer configurations